--- a/BB25HLegalSum.ipynb
+++ b/BB25HLegalSum.ipynb
@@ -58,374 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BM25 with custom_spacy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a corpus for BM25\n",
-    "corpus = fct.sent_segmentation(text)\n",
-    "\n",
-    "# Initialize and index BM25\n",
-    "retriever = bm25s.BM25(corpus=corpus)\n",
-    "retriever.index(bm25s.tokenize(corpus))  \n",
-    "\n",
-    "# Process the summary\n",
-    "sum_sentences = fct.sent_segmentation(summary)\n",
-    "\n",
-    "# Retrieve sentences\n",
-    "for sent in sum_sentences:\n",
-    "    results, scores = retriever.retrieve(bm25s.tokenize(sent), k=2)\n",
-    "    avg_score = np.mean(scores)\n",
-    "    print(sent + \" ; \" + str(avg_score))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(text)\n",
-    "print(summary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(text), len(summary))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "score = fct.rouge_evaluations(text, summary)\n",
-    "print(score)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# BERT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nltk\n",
-    "from transformers import BertModel, BertTokenizer\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_score\n",
-    "import numpy as np\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Charger le modèle et le tokenizer BERT pré-entraîné\n",
-    "model_name = \"bert-base-uncased\"\n",
-    "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
-    "model = BertModel.from_pretrained(model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exemple de texte juridique\n",
-    "# document = \"\"\"\n",
-    "# The law guarantees the fundamental rights and freedoms of every citizen.\n",
-    "# The judge rendered his verdict based on the 2023 law.\n",
-    "# The rights of citizens must be respected in all legal proceedings.\n",
-    "# The 1958 constitution is the basis of the current legal system.\n",
-    "# Every individual has the right to a fair trial under applicable laws.\n",
-    "# \"\"\"\n",
-    "\n",
-    "with open(train_path, 'r', encoding=\"utf-8\") as f:\n",
-    "    train = json.load(f)\n",
-    "\n",
-    "document = train[0][\"raw_source\"]\n",
-    "\n",
-    "# with open('data_txt_save/train_0.txt', 'r', encoding=\"utf-8\") as f:\n",
-    "#     document = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tokenisation en phrases\n",
-    "sentences = fct.sent_segmentation(document, method='nltk')\n",
-    "\n",
-    "# Fonction pour obtenir les embeddings de phrases avec BERT\n",
-    "def get_sentence_embeddings(sentences, tokenizer, model):\n",
-    "    \"\"\"Obtenir les embeddings de phrases avec BERT\n",
-    "    Args:\n",
-    "        sentences (List[str]): Liste des phrases à encoder\n",
-    "        tokenizer (transformers.PreTrainedTokenizer): Tokenizer BERT\n",
-    "        model (transformers.PreTrainedModel): Modèle BERT\n",
-    "    Returns:\n",
-    "        np.array: Tableau des embeddings de phrases    \n",
-    "    \"\"\"\n",
-    "    embeddings = []\n",
-    "    for sentence in sentences:\n",
-    "        inputs = tokenizer(sentence, return_tensors='pt', padding=True, truncation=True)\n",
-    "        outputs = model(**inputs)\n",
-    "        embeddings.append(outputs.last_hidden_state.mean(dim=1).squeeze().detach().numpy())  # Moyenne des embeddings\n",
-    "    return np.array(embeddings)\n",
-    "\n",
-    "# Obtenir les embeddings des phrases\n",
-    "sentence_embeddings = get_sentence_embeddings(sentences, tokenizer, model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# K-Means"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Utiliser K-Means pour regrouper des phrases similaires\n",
-    "n_clusters = 5  # Nombre de clusters souhaités (peut être ajusté)\n",
-    "kmeans = KMeans(n_clusters=n_clusters, random_state=0)\n",
-    "kmeans.fit(sentence_embeddings)\n",
-    "\n",
-    "# Étiquettes des clusters\n",
-    "labels = kmeans.labels_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster = {}\n",
-    "for i in range(n_clusters):\n",
-    "    print(f\"\\nCluster {i+1}:\")\n",
-    "    cluster[i] = []  # Initialiser une liste pour chaque cluster\n",
-    "    for j, sentence in enumerate(sentences):\n",
-    "        if labels[j] == i:\n",
-    "            print(f\"- {sentence}\")\n",
-    "            # Ajouter 'sentence' au cluster 'i'\n",
-    "            cluster[i].append(sentence)\n",
-    "    # Afficher les clés du dictionnaire 'cluster'\n",
-    "print(cluster.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculer le score de silhouette pour évaluer la qualité du clustering\n",
-    "silhouette_avg = silhouette_score(sentence_embeddings, labels)\n",
-    "print(f\"\\nSilhouette Score: {silhouette_avg}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# BM25"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Installer la bibliothèque si nécessaire\n",
-    "# %pip install rank-bm25"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from rank_bm25 import BM25Okapi\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "\n",
-    "nltk.download('punkt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exemple de documents (textes juridiques)\n",
-    "# documents = [\n",
-    "#     \"a cat is a feline and likes to purr\",\n",
-    "#     \"a dog is the human's best friend and loves to play\",\n",
-    "#     \"a bird is a beautiful animal that can fly\",\n",
-    "#     \"a fish is a creature that lives in water and swims\"\n",
-    "# ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dictionnaire pour stocker les documents tokenisés par cluster\n",
-    "tokenized_clusters = {}\n",
-    "\n",
-    "# Tokenisation des documents pour chaque cluster\n",
-    "for i, sentences in cluster.items():\n",
-    "    tokenized_clusters[i] = [word_tokenize(sentence.lower()) for sentence in sentences]\n",
-    "\n",
-    "# Initialiser un modèle BM25 pour chaque cluster\n",
-    "bm25_models = {}\n",
-    "for i, tokenized_docs in tokenized_clusters.items():\n",
-    "    bm25_models[i] = BM25Okapi(tokenized_docs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exemple de requête\n",
-    "query = \"law and legal rights\"\n",
-    "tokenized_query = word_tokenize(query.lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calcul des scores BM25 pour tous les clusters\n",
-    "for cluster_id, bm25 in bm25_models.items():\n",
-    "    # Calcul des scores pour la requête dans chaque cluster\n",
-    "    scores = bm25.get_scores(tokenized_query)\n",
-    "    # print(f\"Scores pour la requête dans le cluster {cluster_id}: {scores}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for cluster_id, bm25 in bm25_models.items():\n",
-    "#     # Récupérer les documents les plus pertinents pour la requête\n",
-    "#     top_docs = bm25.get_top_n(tokenized_query, tokenized_clusters[cluster_id], n=1) # n=1 peut être ajusté pour obtenir plus de documents\n",
-    "#     print(f\"\\nCluster {cluster_id}:\")\n",
-    "#     for doc in top_docs:\n",
-    "#         sentence = ' '.join(doc)\n",
-    "#         print(sentence)\n",
-    "\n",
-    "best_sentences = []\n",
-    "\n",
-    "for cluster_id, bm25 in bm25_models.items():\n",
-    "        # Récupérer les phrases les plus pertinentes pour la requête dans ce cluster\n",
-    "        top_docs = bm25.get_top_n(tokenized_query, tokenized_clusters[cluster_id], n=2)\n",
-    "\n",
-    "        # Extraire les phrases pertinentes et les ajouter à la liste\n",
-    "        for doc in top_docs:\n",
-    "            sentence = ' '.join(doc)  # Convertir le tokenized doc en phrase\n",
-    "            best_sentences.append(sentence)\n",
-    "\n",
-    "# Combiner les meilleures phrases en un paragraphe\n",
-    "paragraph_gen = ' '.join(best_sentences)\n",
-    "    \n",
-    "# Afficher le paragraphe généré\n",
-    "print(\"\\nParagraphe généré à partir des meilleures phrases :\")\n",
-    "print(paragraph_gen)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train[0]['raw_target']\n",
-    "\n",
-    "paragraph_target = train[0]['raw_target']['facts_of_the_case'] + train[0]['raw_target']['question'] + train[0]['raw_target']['conclusion']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "paragraph_target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "score = fct.rouge_evaluations(paragraph_gen, paragraph_target)\n",
-    "print(score)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "M25 clean   \n",
-    "\n",
-    "   Metric  Precision    Recall  F1-Score\n",
-    "0  rouge1   0.257246  0.467105  0.331776\n",
-    "1  rouge2   0.080000  0.145695  0.103286\n",
-    "2  rougeL   0.126812  0.230263  0.163551\n",
-    "\n",
-    "M25 brut\n",
-    "\n",
-    "   Metric  Precision    Recall  F1-Score\n",
-    "0  rouge1   0.449275  0.038871  0.071552\n",
-    "1  rouge2   0.109091  0.009407  0.017321\n",
-    "2  rougeL   0.184783  0.015987  0.029429\n",
-    "\n",
-    "legal pegasus\n",
-    "\n",
-    "   Metric  Precision    Recall  F1-Score\n",
-    "0  rouge1   0.919811  0.560345  0.696429\n",
-    "1  rouge2   0.791469  0.481268  0.598566\n",
-    "2  rougeL   0.768868  0.468391  0.582143\n"
    ]
   },
   {
@@ -434,19 +67,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Définition des chemins vers les fichiers JSON d'entraînement et de développement\n",
     "train_path = 'SCOTUS/train.json'\n",
     "dev_path = 'SCOTUS/dev.json'\n",
     "\n",
+    "# Ouverture du fichier d'entraînement\n",
     "train = fct.open_file(train_path, \"json\")\n",
     "\n",
+    "# Récupération du document source du premier élément de l'ensemble d'entraînement\n",
     "document = train[0][\"raw_source\"]\n",
     "\n",
-    "train[0]['raw_target']\n",
-    "paragraph_target = train[0]['raw_target']['facts_of_the_case'] + train[0]['raw_target']['question'] + train[0]['raw_target']['conclusion']\n",
+    "# Récupération des éléments de la cible (faits, question, conclusion)\n",
+    "paragraph_target = (\n",
+    "    train[0]['raw_target']['facts_of_the_case'] +\n",
+    "    train[0]['raw_target']['question'] +\n",
+    "    train[0]['raw_target']['conclusion']\n",
+    ")\n",
     "\n",
+    "# Segmentation des phrases du document source\n",
     "sentences = fct.sent_segmentation(document, method='nltk')\n",
+    "\n",
+    "# Résumé des phrases en utilisant le modèle BERT\n",
     "summary = fct.bb25LegalSum(sentences, \"bert-base-uncased\", 5)\n",
     "\n",
+    "# Évaluation de la qualité du résumé à l'aide de la métrique ROUGE\n",
     "bb25_rouge = fct.rouge_evaluations(\" \".join(summary), paragraph_target)"
    ]
   },
@@ -458,11 +102,6 @@
    "source": [
     "bb25_rouge"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -481,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
