--- a/BB25HLegalSum.ipynb
+++ b/BB25HLegalSum.ipynb
@@ -15,15 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "resource module not available on Windows\n"
+     ]
+    }
+   ],
    "source": [
     "import functions as fct\n",
     "import bm25s\n",
     "import numpy as np\n",
     "import json\n",
-    "import time"
+    "import time\n",
+    "import os"
    ]
   },
   {
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +191,14 @@
     "results = {}  # Dictionnaire pour stocker les résultats\n",
     "execution_times = {}  # Dictionnaire pour stocker les temps d'exécution\n",
     "\n",
+    "def save_txt(text, folder_name, file_name):\n",
+    "    if not os.path.exists(folder_name):\n",
+    "        os.makedirs(folder_name)\n",
+    "\n",
+    "    file_path = os.path.join(folder_name, file_name)\n",
+    "\n",
+    "    with open(file_path, 'w') as file:\n",
+    "        file.write(text)\n",
     "\n",
     "# Fonction pour évaluer les modèles\n",
     "def evaluate_models(document, paragraph_target, file_type):\n",
@@ -199,6 +216,9 @@
     "\n",
     "        end_time = time.time()\n",
     "        execution_time = end_time - start_time\n",
+    "        \n",
+    "        # summary_conc = \"\\n\".join(summary)\n",
+    "        # save_txt(summary_conc, f\"summaries/{method}/\", \"summary_train_0.txt\") #save train_0 summary\n",
     "        \n",
     "        # Stockage des résultats dans le dictionnaire\n",
     "        results[f\"{file_type} - {method}\"] = bb25_rouge\n",
@@ -676,7 +696,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -690,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
