--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +104,7 @@
     "            if len(result) < 1:\n",
     "                result.append(res.replace('\\n', ''))\n",
     "            else:\n",
-    "                result[-1] += \" \" + res.replace('\\n', '')\n",
-    "\n",
+    "                result[-1] += \" \" + res.replace('\\n', ' ')           \n",
     "    return result, extract"
    ]
   },
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,10 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
+    "CLEANP = re.compile('<.*?>') \n",
+    "\n",
+    "def clean_html_tag(html):\n",
+    "  clean_text = re.sub(CLEANP, '', html)\n",
+    "  return clean_text\n",
+    "  \n",
     "for i in range(len(train)):\n",
     "    tmp = train[i][\"raw_target\"]\n",
     "    text = tmp[\"facts_of_the_case\"] + \" \\n\" + tmp[\"question\"] + \" \\n\" + tmp[\"conclusion\"]\n",
@@ -150,11 +157,20 @@
     "    clean_text = soup.get_text()\n",
     "\n",
     "    name = f'data_txt_save/summary/train_{i}.txt'  # Nom du fichier de sortie\n",
+    "    \n",
+    "    print(clean_html_tag(text))\n",
     "\n",
     "    # Écrire le texte traité dans un fichier\n",
-    "    with open(name, 'w', encoding='utf-8') as f:\n",
-    "        for line in text:\n",
-    "            f.write(line + '\\n')"
+    "    # with open(name, 'w', encoding='utf-8') as f:\n",
+    "    #   f.write(clean_html_tag(text))\n",
+    "      \n",
+    "    # pour voir si le score est mieux, sachant que facts_of_the_case contient des informations qui ne sont pas contenu dans le texte\n",
+    "    # conclusion = tmp[\"conclusion\"]  \n",
+    "     \n",
+    "    # conclusion_name = f'data_txt_save/conclusion/train_{i}.txt'\n",
+    "           \n",
+    "    # with open(conclusion_name, 'w', encoding='utf-8') as f:\n",
+    "    #   f.write(clean_html_tag(conclusion))"
    ]
   },
   {
@@ -209,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The partially cleaned with cleaned is not working whelle because not handeling the \\<a\\> and \\<em\\> tags"
+    "Example of highlight"
    ]
   },
   {
@@ -218,13 +234,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "not_cleaned = fct.open_file(\"data_txt_save/text/train_0.txt\", 'txt')\n",
-    "cleaned = fct.open_file(\"clean_data_txt_save/text/train_0.txt\", 'txt')\n",
+    "summary = fct.open_file(\"data_txt_save/summary/train_0.txt\", 'txt')\n",
+    "conclusion = fct.open_file(\"data_txt_save/conclusion/train_0.txt\", 'txt')\n",
     "\n",
-    "extracts = [phrase.strip() for phrase in cleaned.split('\\n') if phrase.strip()]\n",
+    "extracts = [phrase.strip() for phrase in conclusion.split('\\n') if phrase.strip()]\n",
     "\n",
-    "\n",
-    "highlighted_result_2 = fct.highlight_text(not_cleaned, extracts)\n",
+    "highlighted_result_2 = fct.highlight_text(summary, extracts)\n",
     "\n",
     "display(HTML(f\"<p>{highlighted_result_2}</p>\"))"
    ]
@@ -232,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
