Correct fused words and remove tags from summaries

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -158,11 +158,9 @@
     "\n",
     "    name = f'data_txt_save/summary/train_{i}.txt'  # Nom du fichier de sortie\n",
     "    \n",
-    "    print(clean_html_tag(text))\n",
-    "\n",
     "    # Écrire le texte traité dans un fichier\n",
-    "    # with open(name, 'w', encoding='utf-8') as f:\n",
-    "    #   f.write(clean_html_tag(text))\n",
+    "    with open(name, 'w', encoding='utf-8') as f:\n",
+    "      f.write(clean_html_tag(text))\n",
     "      \n",
     "    # pour voir si le score est mieux, sachant que facts_of_the_case contient des informations qui ne sont pas contenu dans le texte\n",
     "    # conclusion = tmp[\"conclusion\"]  \n",
