--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
     "\n",
     "    text, _ = html_processing(html_content)  # Traiter le contenu HTML\n",
     "\n",
-    "    name = f'SCOTU_data_txt_save/text/train_{i}.txt'  # Nom du fichier de sortie\n",
+    "    name = f'SCOTUS_data_txt_save/text/train_{i}.txt'  # Nom du fichier de sortie\n",
     "\n",
     "    # Écrire le texte traité dans un fichier\n",
     "    with open(name, 'w', encoding='utf-8') as f:\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
     "    soup = BeautifulSoup(text, 'html.parser')\n",
     "    clean_text = soup.get_text()\n",
     "\n",
-    "    name = f'SCOTU_data_txt_save/summary/train_{i}.txt'  # Nom du fichier de sortie\n",
+    "    name = f'SCOTUS_data_txt_save/summary/train_{i}.txt'  # Nom du fichier de sortie\n",
     "    \n",
     "    # Écrire le texte traité dans un fichier\n",
     "    with open(name, 'w', encoding='utf-8') as f:\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1475,7 +1475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
