correct folder name and remove unused folders

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "    text, _ = html_processing(html_content)  # Traiter le contenu HTML\n",
     "\n",
-    "    name = f'SCOTUS_data_txt_save/text/train_{i}.txt'  # Nom du fichier de sortie\n",
+    "    name = f'SCOTUS_data/text/train_{i}.txt'  # Nom du fichier de sortie\n",
     "\n",
     "    # Écrire le texte traité dans un fichier\n",
     "    with open(name, 'w', encoding='utf-8') as f:\n",
@@ -156,7 +156,7 @@
     "    soup = BeautifulSoup(text, 'html.parser')\n",
     "    clean_text = soup.get_text()\n",
     "\n",
-    "    name = f'SCOTUS_data_txt_save/summary/train_{i}.txt'  # Nom du fichier de sortie\n",
+    "    name = f'SCOTUS_data/summary/train_{i}.txt'  # Nom du fichier de sortie\n",
     "    \n",
     "    # Écrire le texte traité dans un fichier\n",
     "    with open(name, 'w', encoding='utf-8') as f:\n",
