--- a/test model files/test-LexRank.ipynb
+++ b/test model files/test-LexRank.ipynb
@@ -51,14 +51,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [09:33<00:00,  5.73s/it]\n"
+      "100%|██████████| 100/100 [06:56<00:00,  4.16s/it]\n"
      ]
     }
    ],
    "source": [
     "summary_gen = []\n",
+    "texts = []\n",
     "\n",
     "for file_name in tqdm(os.listdir(test_path_txt)[:TEXTS_COUNT]):\n",
+    "    text = open(os.path.join(test_path_txt, file_name), 'r').read()\n",
+    "    texts.append(text)\n",
     "    parser = PlaintextParser.from_file(os.path.join(test_path_txt, file_name), Tokenizer(LANGUAGE))\n",
     "\n",
     "    summarizer = LexRankSummarizer()\n",
@@ -80,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1262.70it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 1358.86it/s]\n"
      ]
     }
    ],
@@ -144,6 +147,25 @@
     "\n",
     "print(\"Scores ROUGE :\", avg_scores)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_results = pd.DataFrame({\"Text\": texts, \"Reference\": summary_ref, \"Generated\": summary_gen})\n",
+    "df_results.to_csv(\"results_LexRank.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
