--- a/test model files/test-LexRank.ipynb
+++ b/test model files/test-LexRank.ipynb
@@ -51,7 +51,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [06:56<00:00,  4.16s/it]\n"
+      "  0%|          | 0/100 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [05:49<00:00,  3.50s/it]\n"
      ]
     }
    ],
@@ -83,7 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1358.86it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 1942.88it/s]\n"
      ]
     }
    ],
@@ -117,32 +124,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores ROUGE : {'rouge1': 0.4427502395093806, 'rouge2': 0.15796302795858608, 'rougeL': 0.20809716197503245}\n"
+      "Scores ROUGE : {'rouge1': 0.4427502395093806, 'rouge2': 0.15796302795858608, 'rougeL': 0.20809716197503245, 'bert_score': 0.8313004660606385}\n"
      ]
     }
    ],
    "source": [
     "from rouge_score import rouge_scorer\n",
+    "from bert_score import BERTScorer\n",
     "\n",
-    "scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
-    "scores = []\n",
+    "ROUGE_scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
+    "BERT_scorer = BERTScorer(lang=\"en\")\n",
+    "ROUGE_scores = []\n",
+    "BERT_scores = []\n",
     "for i in range(len(summary_gen)):\n",
-    "    score = scorer.score(summary_ref[i], summary_gen[i])\n",
-    "    scores.append(score)\n",
+    "    score = ROUGE_scorer.score(summary_ref[i], summary_gen[i])\n",
+    "    ROUGE_scores.append(score)\n",
+    "    BERT_scores.append(BERT_scorer.score([summary_ref[i]], [summary_gen[i]]))\n",
     "    # print(f\"Scores pour le résumé {i+1} :\", score)\n",
     "\n",
     "# Moyennes des scores\n",
     "avg_scores = {\n",
-    "    'rouge1': sum(s['rouge1'].fmeasure for s in scores) / len(scores),\n",
-    "    'rouge2': sum(s['rouge2'].fmeasure for s in scores) / len(scores),\n",
-    "    'rougeL': sum(s['rougeL'].fmeasure for s in scores) / len(scores),\n",
+    "    'rouge1': sum(s['rouge1'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rouge2': sum(s['rouge2'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rougeL': sum(s['rougeL'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'bert_score': sum(s[2].mean().item() for s in BERT_scores) / len(BERT_scores),\n",
     "}\n",
     "\n",
     "print(\"Scores ROUGE :\", avg_scores)"
@@ -150,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,13 +179,6 @@
     "df_results = pd.DataFrame({\"Text\": texts, \"Reference\": summary_ref, \"Generated\": summary_gen})\n",
     "df_results.to_csv(\"results_LexRank.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
