--- a/test model files/test-Luhn.ipynb
+++ b/test model files/test-Luhn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,28 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 3/100 [00:00<00:04, 19.67it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:24<00:00,  4.01it/s]\n"
+      "100%|██████████| 100/100 [00:22<00:00,  4.39it/s]\n"
      ]
     }
    ],
    "source": [
     "summary_gen = []\n",
+    "texts = []\n",
     "\n",
     "for file_name in tqdm(os.listdir(test_path_txt)[:TEXTS_COUNT]):\n",
+    "    text = open(os.path.join(test_path_txt, file_name), 'r').read()\n",
+    "    texts.append(text)\n",
     "    parser = PlaintextParser.from_file(os.path.join(test_path_txt, file_name), Tokenizer(LANGUAGE))\n",
     "\n",
     "    summarizer = LuhnSummarizer()\n",
@@ -79,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 11108.09it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 11583.60it/s]\n"
      ]
     }
    ],
@@ -101,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,35 +116,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  torch.utils._pytree._register_pytree_node(\n",
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  torch.utils._pytree._register_pytree_node(\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores ROUGE : {'rouge1': 0.4091338647028827, 'rouge2': 0.15522700021606992, 'rougeL': 0.19931883097230327}\n"
+      "Scores ROUGE : {'rouge1': 0.4091338647028827, 'rouge2': 0.15522700021606992, 'rougeL': 0.19931883097230327, 'bert_score': 0.832454941868782}\n"
      ]
     }
    ],
    "source": [
     "from rouge_score import rouge_scorer\n",
+    "from bert_score import BERTScorer\n",
     "\n",
-    "scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
-    "scores = []\n",
+    "ROUGE_scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
+    "BERT_scorer = BERTScorer(lang=\"en\")\n",
+    "ROUGE_scores = []\n",
+    "BERT_scores = []\n",
     "for i in range(len(summary_gen)):\n",
-    "    score = scorer.score(summary_ref[i], summary_gen[i])\n",
-    "    scores.append(score)\n",
+    "    score = ROUGE_scorer.score(summary_ref[i], summary_gen[i])\n",
+    "    ROUGE_scores.append(score)\n",
+    "    BERT_scores.append(BERT_scorer.score([summary_ref[i]], [summary_gen[i]]))\n",
     "    # print(f\"Scores pour le résumé {i+1} :\", score)\n",
     "\n",
     "# Moyennes des scores\n",
     "avg_scores = {\n",
-    "    'rouge1': sum(s['rouge1'].fmeasure for s in scores) / len(scores),\n",
-    "    'rouge2': sum(s['rouge2'].fmeasure for s in scores) / len(scores),\n",
-    "    'rougeL': sum(s['rougeL'].fmeasure for s in scores) / len(scores),\n",
+    "    'rouge1': sum(s['rouge1'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rouge2': sum(s['rouge2'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'rougeL': sum(s['rougeL'].fmeasure for s in ROUGE_scores) / len(ROUGE_scores),\n",
+    "    'bert_score': sum(s[2].mean().item() for s in BERT_scores) / len(BERT_scores),\n",
     "}\n",
     "\n",
     "print(\"Scores ROUGE :\", avg_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_results = pd.DataFrame({\"Text\": texts, \"Reference\": summary_ref, \"Generated\": summary_gen})\n",
+    "df_results.to_csv(\"results_Luhn.csv\", index=False)"
    ]
   }
  ],
