Fix execution counts in Jupyter notebooks and update file paths in utilities.py for dataset access

--- a/test model files/pegasus-test.ipynb
+++ b/test model files/pegasus-test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "cb972436",
    "metadata": {
     "id": "cb972436"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "1a83915a",
    "metadata": {
     "id": "1a83915a"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "049e7a6f",
    "metadata": {
     "id": "049e7a6f"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0591966a",
    "metadata": {
     "id": "0591966a"
@@ -67,9 +67,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "0\n",
-      "0\n"
+      "/dataset_legal-pegasus/datasetUK-Abs/test-data/judgement\n",
+      "[]\n",
+      "/dataset_legal-pegasus/datasetUK-Abs/test-data/summary/full\n",
+      "[]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Reading the test documents\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m names, data_source, data_summary \u001b[38;5;241m=\u001b[39m get_summary_data(dataset, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(names))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(data_source))\n",
+      "File \u001b[1;32mc:\\Users\\Nicolas\\Desktop\\Master DS\\M2\\Projet\\Projet-M2\\test model files\\..\\utilities.py:56\u001b[0m, in \u001b[0;36mget_summary_data\u001b[1;34m(dataset, train)\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28mprint\u001b[39m(path)\n\u001b[0;32m     55\u001b[0m all_files \u001b[38;5;241m=\u001b[39m glob\u001b[38;5;241m.\u001b[39mglob(path \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/*.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 56\u001b[0m \u001b[38;5;28mprint\u001b[39m(all_files)[:\u001b[38;5;241m10\u001b[39m]\n\u001b[0;32m     57\u001b[0m data_summary \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m all_files:\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
      ]
     }
    ],
