--- a/analysis/data_processing.ipynb
+++ b/analysis/data_processing.ipynb
@@ -2,31 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  torch.utils._pytree._register_pytree_node(\n",
+      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  torch.utils._pytree._register_pytree_node(\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
-    "import functions as fct\n",
-    "from IPython.display import display, HTML"
+    "from IPython.display import display, HTML\n",
+    "import sys\n",
+    "sys.path.insert(0, '../')\n",
+    "import functions as fct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Chemins vers les fichiers JSON d'entraînement et de développement\n",
-    "train_path = 'SCOTUS/train.json'\n",
-    "dev_path = 'SCOTUS/dev.json'"
+    "train_path = '../SCOTUS/train.json'\n",
+    "dev_path = '../SCOTUS/dev.json'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +140,7 @@
     "\n",
     "    text, _ = html_processing(html_content)  # Traiter le contenu HTML\n",
     "\n",
-    "    name = f'SCOTUS_data/text/train_{i}.txt'  # Nom du fichier de sortie\n",
+    "    name = f'../SCOTUS_data/text/train_{i}.txt'  # Nom du fichier de sortie\n",
     "\n",
     "    # Écrire le texte traité dans un fichier\n",
     "    with open(name, 'w', encoding='utf-8') as f:\n",
@@ -137,38 +150,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>facts_of_the_case</th>\n",
+       "      <th>question</th>\n",
+       "      <th>conclusion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>William Packer was convicted in a California s...</td>\n",
+       "      <td>Was a state court’s determination that encoura...</td>\n",
+       "      <td>Encouraging the jury to continue deliberations...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>In 1984 Dow Chemical Co. negotiated a settleme...</td>\n",
+       "      <td>Does the 1984 Agent Orange settlement preclude...</td>\n",
+       "      <td>An equally divided Court affirmed in part and ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>In 1995, the U.S. Supreme Court, in Adarand Co...</td>\n",
+       "      <td>Did the Court of Appeals misapply the strict s...</td>\n",
+       "      <td>In a per curiam opinion, the Court dismissed t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>After stopping him for speeding, an Iowa polic...</td>\n",
+       "      <td>Can a search of a stopped vehicle that occurs ...</td>\n",
+       "      <td>No. In a unanimous opinion, the Court held tha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>To prevent \"local media monopolies,\" Section 5...</td>\n",
+       "      <td>Does 47 U.S.C. 533(b), which bars local teleph...</td>\n",
+       "      <td>Unanswered. After the Court heard oral argumen...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   facts_of_the_case  \\\n",
+       "0  William Packer was convicted in a California s...   \n",
+       "1  In 1984 Dow Chemical Co. negotiated a settleme...   \n",
+       "2  In 1995, the U.S. Supreme Court, in Adarand Co...   \n",
+       "3  After stopping him for speeding, an Iowa polic...   \n",
+       "4  To prevent \"local media monopolies,\" Section 5...   \n",
+       "\n",
+       "                                            question  \\\n",
+       "0  Was a state court’s determination that encoura...   \n",
+       "1  Does the 1984 Agent Orange settlement preclude...   \n",
+       "2  Did the Court of Appeals misapply the strict s...   \n",
+       "3  Can a search of a stopped vehicle that occurs ...   \n",
+       "4  Does 47 U.S.C. 533(b), which bars local teleph...   \n",
+       "\n",
+       "                                          conclusion  \n",
+       "0  Encouraging the jury to continue deliberations...  \n",
+       "1  An equally divided Court affirmed in part and ...  \n",
+       "2  In a per curiam opinion, the Court dismissed t...  \n",
+       "3  No. In a unanimous opinion, the Court held tha...  \n",
+       "4  Unanswered. After the Court heard oral argumen...  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import re\n",
-    "\n",
-    "CLEANP = re.compile('<.*?>') \n",
-    "\n",
-    "def clean_html_tag(html):\n",
-    "  clean_text = re.sub(CLEANP, '', html)\n",
-    "  return clean_text\n",
+    "paragraph_target_df = pd.DataFrame()\n",
     "  \n",
     "for i in range(len(train)):\n",
     "    tmp = train[i][\"raw_target\"]\n",
     "    text = tmp[\"facts_of_the_case\"] + \" \\n\" + tmp[\"question\"] + \" \\n\" + tmp[\"conclusion\"]\n",
     "\n",
-    "    soup = BeautifulSoup(text, 'html.parser')\n",
-    "    clean_text = soup.get_text()\n",
+    "    facts_of_the_case = tmp['facts_of_the_case']\n",
+    "    question = tmp['question']\n",
+    "    conclusion = tmp['conclusion']\n",
     "\n",
-    "    name = f'SCOTUS_data/summary/train_{i}.txt'  # Nom du fichier de sortie\n",
+    "    facts_of_the_case = fct.cleanhtml(facts_of_the_case)\n",
+    "    question = fct.cleanhtml(question)\n",
+    "    conclusion = fct.cleanhtml(conclusion)\n",
+    "\n",
+    "    paragraph_target_df = pd.concat([\n",
+    "        paragraph_target_df,\n",
+    "        pd.DataFrame({\n",
+    "            \"facts_of_the_case\": [facts_of_the_case],\n",
+    "            \"question\": [question],\n",
+    "            \"conclusion\": [conclusion]\n",
+    "        })\n",
+    "    ], ignore_index=True)\n",
+    "\n",
+    "    soup = BeautifulSoup(text, 'html.parser')\n",
+    "    clean_text = fct.cleanhtml(text)\n",
+    "\n",
+    "    name = f'../SCOTUS_data/summary/train_{i}.txt'  # Nom du fichier de sortie\n",
     "    \n",
     "    # Écrire le texte traité dans un fichier\n",
     "    with open(name, 'w', encoding='utf-8') as f:\n",
-    "      f.write(clean_html_tag(text))\n",
-    "      \n",
-    "    # pour voir si le score est mieux, sachant que facts_of_the_case contient des informations qui ne sont pas contenu dans le texte\n",
-    "    # conclusion = tmp[\"conclusion\"]  \n",
-    "     \n",
-    "    # conclusion_name = f'data_txt_save/conclusion/train_{i}.txt'\n",
-    "           \n",
-    "    # with open(conclusion_name, 'w', encoding='utf-8') as f:\n",
-    "    #   f.write(clean_html_tag(conclusion))"
+    "      f.write(clean_text)\n",
+    "\n",
+    "paragraph_target_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paragraph_target_df.to_csv('../SCOTUS_data/paragraph_target_df.csv', index=False)"
    ]
   },
   {
@@ -1461,7 +1577,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1475,7 +1591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
